--- a/index.html
+++ b/index.html
@@ -130,9 +130,14 @@
             <p>Samaritans</p>
           </div>
           <div class="hotline-card">
+            <h3>🇧🇩 Bangladesh</h3>
+            <div class="hotline-number">16789</div>
+            <p>NIMH Mental Health Helpline</p>
+          </div>
+          <div class="hotline-card">
             <h3>🌍 International</h3>
-            <div class="hotline-number">+1-800-273-8255</div>
-            <p>Crisis Text Line: Text HOME to 741741</p>
+            <div class="hotline-number">befrienders.org</div>
+            <p>Find local crisis support worldwide</p>
           </div>
         </div>
         <a href="./feature-crisis.html" class="btn btn-danger mt-4">🚨 Get Immediate Help</a>
@@ -169,10 +174,10 @@
         <div class="footer-section">
           <h3>Connect</h3>
           <div class="social-links">
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#" title="Twitter">𝕏</a>
+            <a href="#" title="Facebook">f</a>
+            <a href="#" title="LinkedIn">in</a>
+            <a href="#" title="Instagram">📷</a>
           </div>
         </div>
       </div>
