--- a/dashboard.html
+++ b/dashboard.html
@@ -35,12 +35,13 @@
         }
 
         .stat-card {
-            background: white;
+            background: var(--bg-primary);
             padding: 1.5rem;
             border-radius: 10px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             text-align: center;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+            border: 1px solid var(--border-color);
         }
 
         .stat-card:hover {
@@ -56,7 +57,7 @@
         }
 
         .stat-label {
-            color: #666;
+            color: var(--text-secondary);
             font-size: 0.9rem;
             margin-top: 0.5rem;
         }
@@ -72,13 +73,14 @@
         }
 
         .chart-container {
-            background: white;
+            background: var(--bg-primary);
             padding: 1.5rem;
             border-radius: 10px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             margin-bottom: 2rem;
             position: relative;
             height: 400px;
+            border: 1px solid var(--border-color);
         }
 
         .chart-container canvas {
@@ -86,11 +88,13 @@
         }
 
         .content-section {
-            background: white;
+            background: var(--bg-primary);
             padding: 2rem;
             border-radius: 10px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             margin-bottom: 2rem;
+            border: 1px solid var(--border-color);
+            color: var(--text-primary);
         }
 
         .btn-logout {
@@ -157,15 +161,33 @@
         }
 
         body.dark-mode .stat-card {
-            background: var(--dark-bg-secondary);
+            background: var(--bg-secondary);
+            color: var(--text-primary);
+        }
+
+        body.dark-mode .stat-card .stat-value {
+            color: var(--primary-color);
+        }
+
+        body.dark-mode .stat-card .stat-label {
+            color: var(--text-secondary);
         }
 
         body.dark-mode .content-section {
-            background: var(--dark-bg-secondary);
+            background: var(--bg-secondary);
+            color: var(--text-primary);
         }
 
         body.dark-mode .chart-container {
-            background: var(--dark-bg-secondary);
+            background: var(--bg-secondary);
+        }
+
+        body.dark-mode table {
+            background: var(--bg-secondary);
+        }
+
+        body.dark-mode tbody tr:hover {
+            background: var(--bg-tertiary);
         }
 
         @media (max-width: 768px) {
@@ -204,6 +226,7 @@
                 <li><a href="./feature-crisis.html">🚨 Crisis Support</a></li>
             </ul>
             <div class="nav-actions">
+                <button class="theme-toggle" type="button" aria-label="Toggle theme"></button>
                 <button class="mobile-menu-btn" aria-label="Toggle menu" title="Open navigation">
                     <svg width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <rect x="3" y="6" width="18" height="2" rx="1" fill="currentColor" />
@@ -302,13 +325,14 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/patient-data.js"></script>
+    <script src="assets/js/api-service.js"></script>
     <script src="assets/js/dashboard-generators.js"></script>
     <script src="assets/js/charts-manager.js"></script>
     <script src="assets/js/theme.js"></script>
 
     <script>
         // Initialize Dashboard
-        function initDashboard() {
+        async function initDashboard() {
             const userRole = localStorage.getItem('userRole') || 'patient';
             const designation = localStorage.getItem('designation') || 'Patient/User';
 
@@ -320,7 +344,14 @@
 
             // Update stats (only show for non-patient roles)
             if (userRole !== 'patient') {
-                const stats = PatientData.getStatistics();
+                let stats;
+                try {
+                    // Try API first
+                    stats = await API.getStatistics();
+                } catch (error) {
+                    console.log('Using mock statistics:', error.message);
+                    stats = PatientData.getStatistics();
+                }
                 document.getElementById('totalPatients').textContent = stats.totalPatients;
                 document.getElementById('criticalCount').textContent = stats.criticalCount;
                 document.getElementById('highRiskCount').textContent = stats.highRiskCount;
@@ -329,7 +360,13 @@
             }
 
             // Check for critical alerts
-            const criticalAlerts = PatientData.getCrisisAlerts();
+            let criticalAlerts;
+            try {
+                criticalAlerts = await API.getCrisisAlerts();
+            } catch (error) {
+                criticalAlerts = PatientData.getCrisisAlerts();
+            }
+
             if (criticalAlerts.length > 0 && userRole !== 'patient') {
                 const banner = document.getElementById('crisisBanner');
                 banner.classList.add('show');
