--- a/feature-ai-analysis.html
+++ b/feature-ai-analysis.html
@@ -18,20 +18,34 @@
         }
 
         .analysis-card {
-            background: white;
+            background: var(--bg-primary);
             padding: 1.5rem;
             border-radius: 10px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             margin-bottom: 1.5rem;
             border-left: 4px solid #667eea;
+            border: 1px solid var(--border-color);
+            border-left: 4px solid #667eea;
+            color: var(--text-primary);
+        }
+
+        .analysis-card h5,
+        .analysis-card p,
+        .analysis-card strong {
+            color: var(--text-primary);
         }
 
         .chart-container {
-            background: white;
+            background: var(--bg-primary);
             padding: 1.5rem;
             border-radius: 10px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             margin-bottom: 2rem;
+            border: 1px solid var(--border-color);
+        }
+
+        .chart-container h3 {
+            color: var(--text-primary);
         }
 
         .risk-badge {
@@ -59,6 +73,19 @@
             background: #90ee90;
             color: #333;
         }
+
+        .content-section {
+            background: var(--bg-primary);
+            padding: 1.5rem;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            border: 1px solid var(--border-color);
+            color: var(--text-primary);
+        }
+
+        .content-section h3 {
+            color: var(--text-primary);
+        }
     </style>
 </head>
 
@@ -77,7 +104,14 @@
                 <li><a href="./feature-crisis.html">🚨 Crisis Support</a></li>
             </ul>
             <div class="nav-actions">
-                <button class="theme-toggle" title="Toggle dark mode">🌙</button>
+                <button class="theme-toggle" type="button" aria-label="Toggle theme"></button>
+                <button class="mobile-menu-btn" aria-label="Toggle menu" title="Open navigation">
+                    <svg width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <rect x="3" y="6" width="18" height="2" rx="1" fill="currentColor" />
+                        <rect x="3" y="11" width="18" height="2" rx="1" fill="currentColor" />
+                        <rect x="3" y="16" width="18" height="2" rx="1" fill="currentColor" />
+                    </svg>
+                </button>
             </div>
         </div>
     </nav>
@@ -106,7 +140,7 @@
         </div>
 
         <!-- Recent AI Insights -->
-        <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+        <div class="content-section">
             <h3 style="margin-top: 0;">💡 Recent AI Insights</h3>
             <div id="aiInsightsList"></div>
         </div>
@@ -115,12 +149,34 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/patient-data.js"></script>
+    <script src="assets/js/api-service.js"></script>
     <script src="assets/js/charts-manager.js"></script>
     <script src="assets/js/theme.js"></script>
 
     <script>
-        function loadAIAnalysis() {
-            const analysis = PatientData.getAIAnalysis().slice(0, 5);
+        async function loadAIAnalysis() {
+            let analysis = [];
+
+            try {
+                const apiAnalysis = await API.getAIAnalysis();
+                if (apiAnalysis && apiAnalysis.length > 0) {
+                    analysis = apiAnalysis.map(a => ({
+                        patientId: a.patient_id,
+                        riskScore: a.risk_score,
+                        dominantEmotion: a.dominant_emotion,
+                        emotionalTrend: a.emotional_trend,
+                        confidenceScore: a.confidence_score,
+                        sentimentScore: a.sentiment_score,
+                        keywordFlags: a.keyword_flags ? a.keyword_flags.split(',') : [],
+                        aiRecommendation: a.ai_recommendation
+                    }));
+                } else {
+                    throw new Error('No data');
+                }
+            } catch (error) {
+                console.log('Using mock AI analysis:', error.message);
+                analysis = PatientData.getAIAnalysis().slice(0, 5);
+            }
 
             let overviewHtml = '<h3>📈 Analysis Overview</h3><div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem;">';
             analysis.forEach((item, idx) => {
@@ -135,7 +191,7 @@
                             </div>
                             <span class="risk-badge ${riskClass}">${item.riskScore}</span>
                         </div>
-                        <p style="margin-top: 0.75rem; font-size: 0.85rem; color: #666;">Confidence: ${(item.confidenceScore * 100).toFixed(0)}%</p>
+                        <p style="margin-top: 0.75rem; font-size: 0.85rem;">Confidence: ${(item.confidenceScore * 100).toFixed(0)}%</p>
                     </div>
                 `;
             });
@@ -149,14 +205,15 @@
             // AI Insights
             let insightsHtml = '';
             analysis.forEach(item => {
+                const keywordFlags = Array.isArray(item.keywordFlags) ? item.keywordFlags.join(', ') : item.keywordFlags;
                 insightsHtml += `
-                    <div style="padding: 1rem; border-bottom: 1px solid #eee;">
+                    <div style="padding: 1rem; border-bottom: 1px solid var(--border-color);">
                         <h5 style="margin-bottom: 0.5rem;">💭 Analysis for ${item.patientId}</h5>
                         <p style="margin: 0.5rem 0; font-size: 0.9rem;">
                             <strong>Dominant Emotion:</strong> ${item.dominantEmotion}<br>
                             <strong>Sentiment Score:</strong> ${item.sentimentScore}<br>
                             <strong>Trend:</strong> ${item.emotionalTrend}<br>
-                            <strong>Key Findings:</strong> ${item.keywordFlags.join(', ')}<br>
+                            <strong>Key Findings:</strong> ${keywordFlags}<br>
                             <strong>Recommendation:</strong> ${item.aiRecommendation}
                         </p>
                     </div>
