--- a/feature-progress.html
+++ b/feature-progress.html
@@ -18,11 +18,19 @@
         }
 
         .progress-card {
-            background: white;
+            background: var(--bg-primary);
             padding: 1.5rem;
             border-radius: 10px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             margin-bottom: 1.5rem;
+            border: 1px solid var(--border-color);
+            color: var(--text-primary);
+        }
+
+        .progress-card h3,
+        .progress-card h5,
+        .progress-card p {
+            color: var(--text-primary);
         }
 
         .metric-badge {
@@ -37,19 +45,31 @@
         }
 
         .chart-container {
-            background: white;
+            background: var(--bg-primary);
             padding: 1.5rem;
             border-radius: 10px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             margin-bottom: 2rem;
+            border: 1px solid var(--border-color);
+        }
+
+        .chart-container h3 {
+            color: var(--text-primary);
         }
 
         .feedback-item {
-            background: #f5f5f5;
+            background: var(--bg-tertiary);
             padding: 1rem;
             border-radius: 8px;
             margin-bottom: 1rem;
             border-left: 4px solid #667eea;
+            color: var(--text-primary);
+        }
+
+        .feedback-item h5,
+        .feedback-item p,
+        .feedback-item strong {
+            color: var(--text-primary);
         }
 
         .rating {
@@ -74,7 +94,14 @@
                 <li><a href="./feature-crisis.html">🚨 Crisis Support</a></li>
             </ul>
             <div class="nav-actions">
-                <button class="theme-toggle" title="Toggle dark mode">🌙</button>
+                <button class="theme-toggle" type="button" aria-label="Toggle theme"></button>
+                <button class="mobile-menu-btn" aria-label="Toggle menu" title="Open navigation">
+                    <svg width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <rect x="3" y="6" width="18" height="2" rx="1" fill="currentColor" />
+                        <rect x="3" y="11" width="18" height="2" rx="1" fill="currentColor" />
+                        <rect x="3" y="16" width="18" height="2" rx="1" fill="currentColor" />
+                    </svg>
+                </button>
             </div>
         </div>
     </nav>
@@ -105,11 +132,13 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/patient-data.js"></script>
+    <script src="assets/js/api-service.js"></script>
     <script src="assets/js/charts-manager.js"></script>
     <script src="assets/js/theme.js"></script>
 
     <script>
-        function loadProgress() {
+        async function loadProgress() {
+            // Use mock data for now (progress API can be added later)
             const progress = PatientData.getProgress().slice(0, 1)[0];
             const feedback = PatientData.getFeedback().slice(0, 3);
 
@@ -120,22 +149,22 @@
                         <div class="progress-card">
                             <h5 style="margin-top: 0;">Emotional Stability</h5>
                             <div style="font-size: 2.5rem; font-weight: bold; color: #667eea;">${progress.emotionalStability}%</div>
-                            <p style="margin: 0.5rem 0 0 0; color: #666; font-size: 0.9rem;">Week ${progress.sessionCount}</p>
+                            <p style="margin: 0.5rem 0 0 0; font-size: 0.9rem;">Week ${progress.sessionCount}</p>
                         </div>
                         <div class="progress-card">
                             <h5 style="margin-top: 0;">Functioning Level</h5>
                             <div style="font-size: 2.5rem; font-weight: bold; color: #764ba2;">${progress.functioningLevel}%</div>
-                            <p style="margin: 0.5rem 0 0 0; color: #666; font-size: 0.9rem;">Overall capacity</p>
+                            <p style="margin: 0.5rem 0 0 0; font-size: 0.9rem;">Overall capacity</p>
                         </div>
                         <div class="progress-card">
                             <h5 style="margin-top: 0;">Coping Skills</h5>
                             <div style="font-size: 2.5rem; font-weight: bold; color: #f093fb;">${progress.copingSkills}%</div>
-                            <p style="margin: 0.5rem 0 0 0; color: #666; font-size: 0.9rem;">Management ability</p>
+                            <p style="margin: 0.5rem 0 0 0; font-size: 0.9rem;">Management ability</p>
                         </div>
                         <div class="progress-card">
                             <h5 style="margin-top: 0;">Overall Improvement</h5>
                             <div style="font-size: 2.5rem; font-weight: bold; color: #4facfe;">${progress.improvementPercentage}%</div>
-                            <p style="margin: 0.5rem 0 0 0; color: #666; font-size: 0.9rem;">This month</p>
+                            <p style="margin: 0.5rem 0 0 0; font-size: 0.9rem;">This month</p>
                         </div>
                     </div>
                 `;
