--- a/feature-recommendations.html
+++ b/feature-recommendations.html
@@ -17,11 +17,19 @@
         }
 
         .rec-card {
-            background: white;
+            background: var(--bg-primary);
             padding: 1.5rem;
             border-radius: 10px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             margin-bottom: 1.5rem;
+            color: var(--text-primary);
+            border: 1px solid var(--border-color);
+        }
+
+        .rec-card h5,
+        .rec-card p,
+        .rec-card strong {
+            color: var(--text-primary);
         }
 
         .category-badge {
@@ -57,6 +65,11 @@
             background: #fa709a;
             color: white;
         }
+
+        /* Progress bar background in dark mode */
+        body.dark-mode .rec-card [style*="background: #f5f5f5"] {
+            background: var(--bg-tertiary) !important;
+        }
     </style>
 </head>
 
@@ -75,7 +88,14 @@
                 <li><a href="./feature-crisis.html">🚨 Crisis Support</a></li>
             </ul>
             <div class="nav-actions">
-                <button class="theme-toggle" title="Toggle dark mode">🌙</button>
+                <button class="theme-toggle" type="button" aria-label="Toggle theme"></button>
+                <button class="mobile-menu-btn" aria-label="Toggle menu" title="Open navigation">
+                    <svg width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <rect x="3" y="6" width="18" height="2" rx="1" fill="currentColor" />
+                        <rect x="3" y="11" width="18" height="2" rx="1" fill="currentColor" />
+                        <rect x="3" y="16" width="18" height="2" rx="1" fill="currentColor" />
+                    </svg>
+                </button>
             </div>
         </div>
     </nav>
@@ -96,13 +116,33 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/patient-data.js"></script>
+    <script src="assets/js/api-service.js"></script>
     <script src="assets/js/theme.js"></script>
 
     <script>
-        function loadRecommendations() {
-            const recommendations = PatientData.getRecommendations().slice(0, 9);
-            let html = '';
+        async function loadRecommendations() {
+            let recommendations = [];
 
+            try {
+                const apiRecs = await API.getRecommendations();
+                if (apiRecs && apiRecs.length > 0) {
+                    recommendations = apiRecs.map(r => ({
+                        activity: r.activity,
+                        category: r.category,
+                        frequency: r.frequency,
+                        duration: r.duration,
+                        status: r.status,
+                        adherence: r.adherence
+                    }));
+                } else {
+                    throw new Error('No data');
+                }
+            } catch (error) {
+                console.log('Using mock recommendations:', error.message);
+                recommendations = PatientData.getRecommendations().slice(0, 9);
+            }
+
+            let html = '';
             recommendations.forEach(rec => {
                 const categoryClass = `cat-${rec.category.toLowerCase()}`;
                 html += `
@@ -115,9 +155,9 @@
                             <strong>Status:</strong> <span style="color: #667eea; font-weight: 600;">${rec.status}</span><br>
                             <strong>Your Adherence:</strong> ${rec.adherence}%
                         </p>
-                        <div style="background: #f5f5f5; padding: 0.75rem; border-radius: 5px; margin-top: 1rem;">
+                        <div style="background: var(--bg-tertiary); padding: 0.75rem; border-radius: 5px; margin-top: 1rem;">
                             <strong style="font-size: 0.9rem;">Progress: ${rec.adherence}%</strong>
-                            <div style="width: 100%; height: 8px; background: #e0e0e0; border-radius: 4px; margin-top: 0.5rem; overflow: hidden;">
+                            <div style="width: 100%; height: 8px; background: var(--border-color); border-radius: 4px; margin-top: 0.5rem; overflow: hidden;">
                                 <div style="width: ${rec.adherence}%; height: 100%; background: linear-gradient(90deg, #667eea, #764ba2); transition: width 0.3s;"></div>
                             </div>
                         </div>
