--- a/dashboard.html
+++ b/dashboard.html
@@ -325,14 +325,13 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/patient-data.js"></script>
-    <script src="assets/js/api-service.js"></script>
     <script src="assets/js/dashboard-generators.js"></script>
     <script src="assets/js/charts-manager.js"></script>
     <script src="assets/js/theme.js"></script>
 
     <script>
         // Initialize Dashboard
-        async function initDashboard() {
+        function initDashboard() {
             const userRole = localStorage.getItem('userRole') || 'patient';
             const designation = localStorage.getItem('designation') || 'Patient/User';
 
@@ -344,14 +343,7 @@
 
             // Update stats (only show for non-patient roles)
             if (userRole !== 'patient') {
-                let stats;
-                try {
-                    // Try API first
-                    stats = await API.getStatistics();
-                } catch (error) {
-                    console.log('Using mock statistics:', error.message);
-                    stats = PatientData.getStatistics();
-                }
+                const stats = PatientData.getStatistics();
                 document.getElementById('totalPatients').textContent = stats.totalPatients;
                 document.getElementById('criticalCount').textContent = stats.criticalCount;
                 document.getElementById('highRiskCount').textContent = stats.highRiskCount;
@@ -360,13 +352,7 @@
             }
 
             // Check for critical alerts
-            let criticalAlerts;
-            try {
-                criticalAlerts = await API.getCrisisAlerts();
-            } catch (error) {
-                criticalAlerts = PatientData.getCrisisAlerts();
-            }
-
+            const criticalAlerts = PatientData.getCrisisAlerts();
             if (criticalAlerts.length > 0 && userRole !== 'patient') {
                 const banner = document.getElementById('crisisBanner');
                 banner.classList.add('show');
