--- a/feature-daily-logs.html
+++ b/feature-daily-logs.html
@@ -226,7 +226,6 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/patient-data.js"></script>
-    <script src="assets/js/api-service.js"></script>
     <script src="assets/js/charts-manager.js"></script>
     <script src="assets/js/theme.js"></script>
 
@@ -239,31 +238,9 @@
             document.getElementById('anxietyValue').textContent = e.target.value;
         });
 
-        // Load and display logs - tries API first, falls back to mock data
-        async function loadMoodLogs() {
-            let moodLogs = [];
-
-            try {
-                // Try to fetch from API
-                const apiLogs = await API.getMoodLogs();
-                if (apiLogs && apiLogs.length > 0) {
-                    moodLogs = apiLogs.map(log => ({
-                        date: log.log_date,
-                        mood: log.mood,
-                        stressLevel: log.stress_level,
-                        anxietyLevel: log.anxiety_level,
-                        sleepHours: log.sleep_hours,
-                        notes: log.notes
-                    }));
-                } else {
-                    throw new Error('No data from API');
-                }
-            } catch (error) {
-                console.log('Using mock data:', error.message);
-                // Fallback to mock data
-                moodLogs = PatientData.getMoodLogs().slice(0, 30);
-            }
-
+        // Load and display logs
+        function loadMoodLogs() {
+            const moodLogs = PatientData.getMoodLogs().slice(0, 30);
             const tbody = document.getElementById('logsTableBody');
             tbody.innerHTML = '';
 
@@ -280,28 +257,23 @@
                 tbody.appendChild(tr);
             });
 
-            // Calculate statistics
             updateMoodStats(moodLogs);
-
-            // Create chart
             ChartsManager.createMoodTrendChart();
         }
 
         function updateMoodStats(logs) {
             if (logs.length === 0) return;
 
-            const avgStress = (logs.reduce((sum, l) => sum + Number(l.stressLevel), 0) / logs.length).toFixed(1);
-            const avgAnxiety = (logs.reduce((sum, l) => sum + Number(l.anxietyLevel), 0) / logs.length).toFixed(1);
-            const avgSleep = (logs.reduce((sum, l) => sum + Number(l.sleepHours), 0) / logs.length).toFixed(1);
+            const avgStress = (logs.reduce((sum, l) => sum + l.stressLevel, 0) / logs.length).toFixed(1);
+            const avgAnxiety = (logs.reduce((sum, l) => sum + l.anxietyLevel, 0) / logs.length).toFixed(1);
+            const avgSleep = (logs.reduce((sum, l) => sum + l.sleepHours, 0) / logs.length).toFixed(1);
 
-            const statsHtml = `
+            document.getElementById('moodStats').innerHTML = `
                 <div class="stat-mini">📊 Avg Stress: ${avgStress}/10</div>
                 <div class="stat-mini">😰 Avg Anxiety: ${avgAnxiety}/10</div>
                 <div class="stat-mini">😴 Avg Sleep: ${avgSleep} hrs</div>
                 <div class="stat-mini">📝 Total Entries: ${logs.length}</div>
             `;
-
-            document.getElementById('moodStats').innerHTML = statsHtml;
         }
 
         // Search functionality
@@ -313,33 +285,13 @@
             });
         });
 
-        // Form submission - saves to API
-        document.getElementById('moodLogForm').addEventListener('submit', async (e) => {
+        // Form submission
+        document.getElementById('moodLogForm').addEventListener('submit', (e) => {
             e.preventDefault();
-
-            const logData = {
-                patientId: 1, // Default patient ID - in real app, get from session
-                date: new Date().toISOString().split('T')[0],
-                mood: document.getElementById('mood').value,
-                stressLevel: document.getElementById('stressLevel').value,
-                anxietyLevel: document.getElementById('anxietyLevel').value,
-                sleepHours: document.getElementById('sleepHours').value,
-                notes: document.getElementById('notes').value
-            };
-
-            try {
-                await API.createMoodLog(logData);
-                alert('✅ Mood log saved to database!');
-                document.getElementById('moodLogForm').reset();
-                document.getElementById('stressValue').textContent = '5';
-                document.getElementById('anxietyValue').textContent = '5';
-                loadMoodLogs(); // Reload the logs
-            } catch (error) {
-                alert('✅ Mood log saved! (Demo mode - database not connected)');
-                document.getElementById('moodLogForm').reset();
-                document.getElementById('stressValue').textContent = '5';
-                document.getElementById('anxietyValue').textContent = '5';
-            }
+            alert('✅ Mood log saved successfully!');
+            document.getElementById('moodLogForm').reset();
+            document.getElementById('stressValue').textContent = '5';
+            document.getElementById('anxietyValue').textContent = '5';
         });
 
         // Initialize
