--- a/feature-progress.html
+++ b/feature-progress.html
@@ -132,13 +132,11 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/patient-data.js"></script>
-    <script src="assets/js/api-service.js"></script>
     <script src="assets/js/charts-manager.js"></script>
     <script src="assets/js/theme.js"></script>
 
     <script>
-        async function loadProgress() {
-            // Use mock data for now (progress API can be added later)
+        function loadProgress() {
             const progress = PatientData.getProgress().slice(0, 1)[0];
             const feedback = PatientData.getFeedback().slice(0, 3);
 
