--- a/feature-recommendations.html
+++ b/feature-recommendations.html
@@ -116,33 +116,13 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/patient-data.js"></script>
-    <script src="assets/js/api-service.js"></script>
     <script src="assets/js/theme.js"></script>
 
     <script>
-        async function loadRecommendations() {
-            let recommendations = [];
-
-            try {
-                const apiRecs = await API.getRecommendations();
-                if (apiRecs && apiRecs.length > 0) {
-                    recommendations = apiRecs.map(r => ({
-                        activity: r.activity,
-                        category: r.category,
-                        frequency: r.frequency,
-                        duration: r.duration,
-                        status: r.status,
-                        adherence: r.adherence
-                    }));
-                } else {
-                    throw new Error('No data');
-                }
-            } catch (error) {
-                console.log('Using mock recommendations:', error.message);
-                recommendations = PatientData.getRecommendations().slice(0, 9);
-            }
-
+        function loadRecommendations() {
+            const recommendations = PatientData.getRecommendations().slice(0, 9);
             let html = '';
+
             recommendations.forEach(rec => {
                 const categoryClass = `cat-${rec.category.toLowerCase()}`;
                 html += `
